<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros2_offboard</name>
  <version>0.0.0</version>
  <description>ROS2 PX4 Interface Velocity Control</description>
  <maintainer email="sasa.kuruppuarachchi@gmail.com">braden</maintainer>
  <license>BSD-3</license>
  
  <depend>px4_msgs</depend>
  <depend>as2_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
